@@ -1,3 +1,8 @@
+2005-06-27 Andrew Ruder <aeruder@ksu.edu>
+ * GNUstepOutput: The NSTextField was much too much of a pain to use anymore.
+ I've replaced the typing view full out with a KeyTextView which I think will
+ also allow OS X to work sanely.
+
 2005-06-26 Andrew Ruder <aeruder@ksu.edu>
  * GNUstepOutput: On OS X focusing a textfield causes the action to be sent.
  This was causing the messages to be sent everytime the window was made key.
